--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -17,5 +17,9 @@ jobs:
     steps:
       #Check-out your repository
       - uses: actions/checkout@v3
+
+      - name: To Show Error
+        run: echo "Should fail at this point .." ; exit 1
+
       - name: Run a one-line script
         run: echo "Continuous Integration"
