--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -23,6 +23,14 @@ jobs:
                 distribution: 'temurin'
                 java-version: '17'
 
+            #Set up Maven cache
+            - name: Cache Maven packages
+              #This action allows caching the dependencies
+              uses: actions/cache@v3
+              with:
+                path: ~/.m2
+                key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+                restore-keys: ${{ runner.os }}-m2
             #Run Tests
             - name: Run Tests
               run: mvn -B test  
@@ -47,3 +55,13 @@ jobs:
             - name: Build with Maven
               run: mvn -B package -DskipTests --file pom.xml
             - run: mkdir staging && cp target/*.jar staging  
+
+            #Upload the jar artifact
+            - name: Upload JAR Artifact
+             #This uploads artifacts from your workflow
+              uses: actions/upload-artifact@v3
+              with:
+                #Set artifact name
+                name: RunnableJar
+                #From this path
+                path: staging
