--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -5,7 +5,8 @@ on:
     #Trigger the workflow on push from the master/main branch
     push:
         branches: [ master ]
-
+env:
+    REGISTRY: ghcr.io
 jobs:
     #Test's job
     tests:
@@ -65,3 +66,25 @@ jobs:
                 name: RunnableJar
                 #From this path
                 path: staging
+
+# Deploy to GHCR
+push-image-gchr:
+  needs: build
+  name: Deploy Images to GHCR
+  runs-on: ubuntu-latest
+  steps:
+  - name: 'Checkout GitHub Action'
+    uses: actions/checkout@v3
+  
+  - name: 'Login to GitHub Container Registry'
+    uses: docker/login-action@v2
+    with:
+      registry: ${{ env.REGISTRY }}
+      username: ${{github.actor}}
+      password: ${{secrets.GITHUB_TOKEN}}
+      # Log out from the Docker registry at the end of the job
+      logout: true
+  - name: 'Build the Docker Image'
+    run: |
+      docker build . --tag ghcr.io/${{github.actor}}/devops-demo:latest
+      docker push ghcr.io/${{github.actor}}/devops-demo:latest
